k8s/ugc-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ugc-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ugc-service
  template:
    metadata:
      labels:
        app: ugc-service
    spec:
      containers:
        - name: ugc-service-container
          image: dosxana/ugc-service:latest
          ports:
            - containerPort: 8084
          imagePullPolicy: IfNotPresent
