k8s/file-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-api-service
spec:
  selector:
    app: file-api
  ports:
    - protocol: TCP
      port: 8081
  type: ClusterIP
