k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: small-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-api-service
                port:
                  number: 8081
